// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createUpdatedPackageJson() dependencies should write the versions of the successful updates to the package json 1`] = `
Object {
  "dependencies": Object {
    "dep-1": "1.0.0",
    "dep-2": "1.0.0",
    "updtr-test-module-1": "2.0.0",
    "updtr-test-module-2": "1.0.0",
  },
}
`;

exports[`createUpdatedPackageJson() devDependencies should write the versions of the successful updates to the package json 1`] = `
Object {
  "devDependencies": Object {
    "dep-1": "1.0.0",
    "dep-2": "1.0.0",
    "updtr-test-module-1": "2.0.0",
    "updtr-test-module-2": "1.0.0",
  },
}
`;

exports[`createUpdatedPackageJson() optionalDependencies should write the versions of the successful updates to the package json 1`] = `
Object {
  "optionalDependencies": Object {
    "dep-1": "1.0.0",
    "dep-2": "1.0.0",
    "updtr-test-module-1": "2.0.0",
    "updtr-test-module-2": "1.0.0",
  },
}
`;

exports[`createUpdatedPackageJson() when a module is listed in more than one dependency type should update all dependency occurrences 1`] = `
Object {
  "dependencies": Object {
    "updtr-test-module-1": "2.0.0",
  },
  "devDependencies": Object {
    "updtr-test-module-1": "^2.0.0",
  },
  "optionalDependencies": Object {
    "updtr-test-module-1": "2.x.x",
  },
}
`;

exports[`createUpdatedPackageJson() when the updated modules are not listed as any dependency type should save the modules as regular dependency 1`] = `
Object {
  "dependencies": Object {
    "updtr-test-module-1": "2.0.0",
    "updtr-test-module-2": "2.1.1",
  },
}
`;
